--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -87,3 +87,7 @@ body {
 .button-incorrect {
     @apply bg-red-500/90 inline-flex scale-[0.78] btn glass items-center px-4 py-2 h-5  border border-transparent rounded-md font-semibold text-lg  text-white hover:bg-primary focus:bg-red-600 active:bg-red-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition ease-in-out duration-150;
 }
+
+.action-btn {
+    @apply rounded-lg inline-flex items-center border border-primary/60 shadow-md p-1 px-2 bg-info
+}
