--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -41,7 +41,7 @@ input[type="number"] {
 }
 
 .gradient-primary {
-    @apply bg-gradient-to-br from-primary from-30% via-50% to-10%  via-hijau to-secondary opacity-100;
+    @apply bg-gradient-to-r from-primary from-30% via-50% to-10%  via-hijau to-secondary opacity-100;
 }
 
 .gradient-sidebar {
@@ -109,11 +109,48 @@ input[type="number"] {
 }
 
 .action-btn {
-    @apply rounded-lg inline-flex items-center border  shadow-md p-1 px-2;
+    @apply rounded-lg inline-flex items-center justify-center border mx-auto shadow-md p-1 px-2;
 }
 
+table.table-bordered {
+    /* table-layout: auto; */
+    width: 100%;
+    border-collapse: collapse;
+    line-height: 1rem;
+    overflow: hidden;
+    @apply border-slate-600
+}
+
+
+table.table-bordered > thead > tr > th {
+    @apply border border-white
+}
+table.table-bordered > thead > tr > th {
+    @apply border border-secondary/15
+}
+
+table.table-bordered > tbody > tr > td {
+    @apply border border-secondary/15
+}
+table.table-bordered > tbody > tr > th {
+    @apply border border-secondary/15
+}
+
+
+.box-footer{
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+    border-top-width: 1px;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+
+
 .label-warning {
-    @apply rounded-md bg-rose-500/90 uppercase p-1 mx-3 text-xs font-semibold
+    @apply rounded-md bg-rose-500/90 uppercase p-1 mx-3 text-xs font-semibold text-center
 }
 
 .label-secondary {
@@ -127,29 +164,3 @@ input[type="number"] {
 .label-base {
     @apply rounded-md uppercase p-1 mx-3 text-xs font-semibold text-center
 }
-
-table.table-bordered {
-    /* table-layout: auto; */
-    width: 100%;
-    border-collapse: collapse;
-    font-size: 1rem;
-    line-height: 1rem;
-
-    @apply border-slate-600
-
-}
-
-table.table-bordered > thead > tr > th {
-    @apply border border-slate-500
-}
-
-table.table-bordered > tbody > tr > td {
-    @apply border border-slate-500
-}
-table.table-bordered > tbody > tr > th {
-    @apply border border-slate-500
-}
-
-/* table.table-bordered > tbody > tr > td {
-    border: 1px solid #334454;
-} */
