--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -161,7 +161,7 @@ table.table-bordered > tbody > tr > th {
 }
 
 .label-base {
-    @apply p-1 mx-3 text-xs font-semibold text-center uppercase rounded-md text-slate-500;
+    @apply p-1 mx-3 text-[11px] font-semibold text-center uppercase rounded-md text-slate-500;
 }
 
 .user-profile-image {
