--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -149,19 +149,23 @@ table.table-bordered > tbody > tr > th {
 }
 
 .label-warning {
-    @apply p-1 mx-3 text-xs font-semibold text-center uppercase rounded-md bg-error/60 text-slate-700/80;
+    @apply p-1 mx-auto text-xs font-semibold text-center uppercase border rounded-md bg-warning/25 border-warning/25 text-warning;
 }
 
 .label-secondary {
-    @apply p-1 mx-3 text-xs font-semibold text-center uppercase rounded-md bg-secondary/90 text-slate-700/80;
+    @apply p-1 mx-auto text-xs font-semibold text-center uppercase border rounded-md bg-secondary/10 border-secondary/25 text-secondary;
 }
 
 .label-success {
-    @apply p-1 mx-3 text-xs font-semibold text-center uppercase rounded-md bg-success/70 text-slate-700/80;
+    @apply p-1 mx-auto text-xs font-semibold text-center uppercase border rounded-md bg-success/25 border-success/25 text-success;
+}
+
+.label-primary {
+    @apply p-1 mx-auto text-xs font-semibold text-center uppercase border rounded-md bg-primary/10 border-primary/25 text-primary;
 }
 
 .label-base {
-    @apply p-1 mx-3 text-[11px] font-semibold text-center uppercase rounded-md text-slate-500;
+    @apply p-1 mx-auto text-[11px] font-semibold text-center uppercase rounded-md ;
 }
 
 .user-profile-image {
